[package]
name = "spin"
description = "Super Pinball System"
version = "0.1.0"
edition = "2021"

[lib]
name = "spin"
path = "src/lib.rs"

[[bin]]
name = "spin"
path = "src/bin.rs"

[features]
default = ["sdl"]
sdl = []

[dependencies]
clap = { version = "4.5.13", features = ["cargo", "derive"] }
ctrlc = "3.4.5"
mlua = { version = "~0.10.2", features = ["lua54", "serialize"] }
sdl2 = { version = "0.37", features = ["ttf","image","gfx","mixer"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"

